--- a/DiplomPracticRGSU/App.config
+++ b/DiplomPracticRGSU/App.config
@@ -14,10 +14,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="Model1" connectionString="data source=.\SQLEXPRESS;initial catalog=TechnoparkPractic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="DiplomPracticRGSU.Properties.Settings.TechnoparkPracticConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=TechnoparkPractic;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="Model11" connectionString="data source=.\SQLEXPRESS;initial catalog=TechnoparkPractic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Model52" connectionString="data source=.\SQLEXPRESS;initial catalog=TechnoparkPractic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="Model12" connectionString="data source=.\SQLEXPRESS;initial catalog=TechnoparkPractic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+
+  <add name="Model1" connectionString="data source=.\SQLEXPRESS;initial catalog=TechnoparkPractic;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
 </configuration>
